--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,187 @@
 /* You can add global styles to this file, and also import other style files */
+
+$black: #000814;
+$dark-blue: #001D3D;
+$blue: #003566;
+$dark-yellow: #FFC300;
+$yellow: #FFD60A;
+$red: #ff0054;
+$green: #38b000;
+
+* {
+  box-sizing: border-box;
+  font-family: monospace;
+}
+
+html,
+body,
+app-root {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: $black;
+}
+
+.wrapper {
+  width: 100%;
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  width: 100%;
+  padding: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.column {
+  flex-grow: 1;
+  max-width: 1024px;
+  padding: 12px;
+}
+
+.action-row {
+  margin-top: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  background-color: $dark-blue;
+  color: $yellow;
+  border: 0;
+  border-radius: 4px;
+  resize: none;
+  outline: none;
+}
+textarea {
+  height: 250px;
+}
+
+label {
+  display: block;
+  margin-bottom: 12px;
+  color: $dark-yellow;
+  font-size: 14px;
+}
+
+
+.regex-wrapper {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.regex-prefix {
+  padding: 12px 18px;
+  font-size: 16px;
+  font-weight: 700;
+  background-color: $dark-blue;
+  color: $yellow;
+  border-right: 1px solid $black;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.regex {
+  border-radius: 0;
+}
+.regex-wrapper button {
+  max-width: 300px;
+  background-color: $dark-blue;
+  color: $dark-yellow;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+
+.substitution {
+  width: 100%;
+  // border-top-right-radius: 0;
+  // border-bottom-right-radius: 0;
+}
+button {
+  padding: 12px 24px;
+  border: 0;
+  background-color: $dark-yellow;
+  color: $black;
+  border-left: 1px solid $black;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 700;
+}
+button:disabled {
+  background-color: $red;
+}
+
+.matches {
+  color: $red;
+  font-size: 14px;
+  overflow-wrap: break-word;
+}
+.matches-label {
+  color: $dark-yellow;
+}
+.divider {
+  color: gray;
+}
+
+.flags-dropdown {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: $dark-yellow;
+  border-radius: 4px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, .12),
+              0 2px 4px rgba(0, 0, 0, .24);
+}
+.flags-list {
+  max-width: 370px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.flags-list-item {
+  padding: 12px 24px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  color: $black;
+  border-bottom: 1px solid $dark-blue;
+  cursor: pointer;
+}
+.flags-list-item:last-child {
+  border: 0;
+}
+.flag-check {
+  width: 15%;
+  font-size: 16px;
+  font-weight: 700;
+}
+.flag-info {
+  width: 85%;
+}
+.list-item-title {
+  font-size: 16px;
+  font-weight: 700;
+}
+.list-item-description {
+  color: dark-gray;
+}
